objects/Sales_Zone__c.object
<CustomObject>
    <fields>
        <fullName>Region_Subdivision__c</fullName>
        <label>Region-Subdivision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region_Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region Identifier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sales_Region__c.SubDivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.SubDivision__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Region__c</referenceTo>
        <relationshipLabel>Sales Zones</relationshipLabel>
        <relationshipName>Sales_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubDivision__c</fullName>
        <label>SubDivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <label>Sales Zone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>